fix: 간편 견적 z-index 수정

--- a/src/app/_component/menuButtons.module.css
+++ b/src/app/_component/menuButtons.module.css
@@ -5,4 +5,5 @@
   display: flex;
   flex-direction: column;
   gap: 14px;
+  z-index: 999;
 }
